add fungible lock
