# packages/cacti-copm-core/src/main/json/openapi.json
@@ -38,7 +38,7 @@
         }
       },
       "AssetAccountV1": {
-        "description": "description of a network account used in exchanging or transferring assets",
+        "description": "A network account used in exchanging or transferring assets.",
         "type": "object",
         "required": ["network", "user_id"],
         "properties": {
@@ -100,7 +100,7 @@
           },
           "secret": {
             "type": "string",
-            "example": "mysecret"
+            "example": "my_secret"
           }
         }
       },
@@ -137,7 +137,7 @@
       "AssetLockClaimV1": {
         "description": "Asset Claim per https://github.com/hyperledger/cacti/blob/main/weaver/rfcs/protocols/asset-transfer/generic.md#protocol-units-or-building-blocks",
         "required": [
-          "pledge_id",
+          "lock_id",
           "source",
           "destination",
           "asset",
@@ -145,6 +145,9 @@
           "hash_info"
         ],
         "properties": {
+          "lock_id": {
+            "type": "string"
+          },
           "source": {
             "$ref": "#/components/schemas/AssetAccountV1"
           },
@@ -213,7 +216,7 @@
           }
         }
       },
-      "ViewV1": {
+      "ViewAddressV1": {
         "description": "View per https://github.com/hyperledger/cacti/blob/main/weaver/rfcs/formats/views/addressing.md#views",
         "properties": {
           "contract_id": {
@@ -233,30 +236,26 @@
           }
         }
       },
-      "ViewAddressV1": {
+      "ViewV1": {
         "description": "View Description per https://github.com/hyperledger/cacti/blob/main/weaver/rfcs/formats/views/addressing.md",
         "properties": {
-          "gateway": {
-            "type": "string",
-            "example": "relay1.example.com:7542;relay2.example.com:7542;"
-          },
           "network": {
             "type": "string",
             "example": "network1"
           },
-          "view": {
-            "$ref": "#/components/schemas/ViewV1"
+          "view_address": {
+            "$ref": "#/components/schemas/ViewAddressV1"
           }
         }
       },
       "StateProofV1": {
         "description": "Verifies a view address according to the configured verification policy for the view",
         "properties": {
-          "user": {
+          "account": {
             "$ref": "#/components/schemas/AssetAccountV1"
           },
-          "view_address": {
-            "$ref": "#/components/schemas/ViewAddressV1"
+          "view": {
+            "$ref": "#/components/schemas/ViewV1"
           }
         }
       }
